--- a/BAAR/BAAR.iOS/Main.storyboard
+++ b/BAAR/BAAR.iOS/Main.storyboard
@@ -13,12 +13,14 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oBE-Ac-vcx" buttonType="roundedRect" hasAttributedTitle="YES" verticalHuggingPriority="371">
                                 <rect key="frame" x="37" y="300" width="247" height="30"/>
-                                <connections/>
+                                <connections>
+                                    <segue id="1417" destination="192" kind="show"/>
+                                </connections>
                                 <state key="normal">
                                     <attributedString key="attributedTitle">
                                         <fragment content="Login">
@@ -214,13 +216,13 @@
         </scene>
         <scene sceneID="191">
             <objects>
-                <viewController id="192" sceneMemberID="viewController" customClass="ButtonPage" title="ButtonPage" storyboardIdentifier="ButtonPage">
+                <viewController id="192" sceneMemberID="viewController" customClass="ButtonPage" title="ButtonPage" storyboardIdentifier="SecondaryScreen" useStoryboardIdentifierAsRestorationIdentifier="YES">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="189"/>
                         <viewControllerLayoutGuide type="bottom" id="190"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="193" customClass="UIView">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -228,86 +230,110 @@
                             <mask key="subviews">
                                 <include reference="258"/>
                                 <include reference="985"/>
+                                <include reference="1430"/>
                             </mask>
                             <color key="backgroundColor" colorSpace="calibratedRGB" red="0" green="0.035294117647058823" blue="0.10196078431372549" alpha="1"/>
                             <mask key="constraints">
-                                <include reference="772"/>
-                                <include reference="773"/>
-                                <include reference="986"/>
-                                <include reference="987"/>
-                                <include reference="988"/>
+                                <include reference="1422"/>
+                                <include reference="1423"/>
+                                <include reference="1426"/>
+                                <include reference="1427"/>
+                                <include reference="1440"/>
+                                <include reference="1441"/>
+                                <include reference="1442"/>
                             </mask>
                         </variation>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="258" translatesAutoresizingMaskIntoConstraints="NO" text="Going Pro!">
-                                <rect key="frame" x="14" y="102" width="293" height="78"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="258" translatesAutoresizingMaskIntoConstraints="NO" text="Go!">
+                                <rect key="frame" x="14" y="16" width="293" height="78"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="60"/>
                                 <nil key="highlightedColor"/>
                                 <accessibility key="accessibilityConfiguration" label="Scan"/>
                                 <color key="textColor" colorSpace="calibratedRGB" red="1" green="1" blue="1" alpha="1"/>
                                 <constraints>
-                                    <constraint id="774" firstAttribute="width" constant="293"/>
-                                    <constraint id="775" firstAttribute="height" constant="78"/>
+                                    <constraint id="1424" firstAttribute="width" constant="293"/>
+                                    <constraint id="1425" firstAttribute="height" constant="78"/>
                                 </constraints>
                                 <variation key="default">
                                     <mask key="constraints">
-                                        <exclude reference="774"/>
-                                        <exclude reference="775"/>
+                                        <exclude reference="1424"/>
+                                        <exclude reference="1425"/>
                                     </mask>
                                 </variation>
                                 <variation key="heightClass=regular-widthClass=compact">
                                     <mask key="constraints">
-                                        <include reference="774"/>
-                                        <include reference="775"/>
+                                        <include reference="1424"/>
+                                        <include reference="1425"/>
                                     </mask>
                                 </variation>
                             </label>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="985" translatesAutoresizingMaskIntoConstraints="NO">
-                                <rect key="frame" x="71" y="184" width="178" height="176"/>
+                                <rect key="frame" x="72" y="196" width="177" height="176"/>
                                 <state key="normal" backgroundImage="GoingPro_Icon.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
-                                <constraints>
-                                    <constraint id="989" firstAttribute="width" constant="178"/>
-                                    <constraint id="990" firstAttribute="height" constant="176"/>
-                                </constraints>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="989"/>
-                                        <exclude reference="990"/>
-                                    </mask>
-                                </variation>
-                                <variation key="heightClass=regular-widthClass=compact">
-                                    <mask key="constraints">
-                                        <include reference="989"/>
-                                        <include reference="990"/>
-                                    </mask>
-                                </variation>
                                 <connections>
                                     <action selector="UIButton985_TouchUpInside:" destination="192" id="1221" eventType="touchUpInside"/>
                                     <segue id="1342" destination="283" kind="show"/>
                                 </connections>
+                                <constraints>
+                                    <constraint id="1429" firstAttribute="height" constant="176"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="1429"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="1429"/>
+                                    </mask>
+                                </variation>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="1430" translatesAutoresizingMaskIntoConstraints="NO" text="Click Badge To Start Scan">
+                                <rect key="frame" x="34" y="380" width="254" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="highlightedColor"/>
+                                <color key="textColor" colorSpace="calibratedRGB" red="1" green="1" blue="1" alpha="1"/>
+                                <constraints>
+                                    <constraint id="1439" firstAttribute="width" constant="254"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="1439"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="1439"/>
+                                    </mask>
+                                </variation>
+                            </label>
                         </subviews>
                         <variation key="default">
                             <mask key="subviews">
                                 <exclude reference="258"/>
                                 <exclude reference="985"/>
+                                <exclude reference="1430"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="772"/>
-                                <exclude reference="773"/>
-                                <exclude reference="986"/>
-                                <exclude reference="987"/>
-                                <exclude reference="988"/>
+                                <exclude reference="1422"/>
+                                <exclude reference="1423"/>
+                                <exclude reference="1426"/>
+                                <exclude reference="1427"/>
+                                <exclude reference="1440"/>
+                                <exclude reference="1441"/>
+                                <exclude reference="1442"/>
                             </mask>
                         </variation>
                         <constraints>
-                            <constraint id="772" firstItem="258" firstAttribute="centerX" secondItem="193" secondAttribute="centerX"/>
-                            <constraint id="773" firstItem="258" firstAttribute="top" secondItem="193" secondAttribute="top" constant="102"/>
-                            <constraint id="986" firstItem="985" firstAttribute="centerX" secondItem="258" secondAttribute="centerX"/>
-                            <constraint id="987" firstItem="985" firstAttribute="centerX" secondItem="193" secondAttribute="centerX"/>
-                            <constraint id="988" firstItem="193" firstAttribute="bottom" secondItem="985" secondAttribute="bottom" constant="120"/>
+                            <constraint id="1422" firstItem="258" firstAttribute="top" secondItem="193" secondAttribute="top" constant="16"/>
+                            <constraint id="1423" firstItem="193" firstAttribute="trailing" secondItem="258" secondAttribute="trailing" constant="13"/>
+                            <constraint id="1426" firstItem="193" firstAttribute="bottom" secondItem="985" secondAttribute="bottom" constant="196"/>
+                            <constraint id="1427" firstItem="193" firstAttribute="trailing" secondItem="985" secondAttribute="trailing" constant="71"/>
+                            <constraint id="1440" firstItem="1430" firstAttribute="centerX" secondItem="258" secondAttribute="centerX"/>
+                            <constraint id="1441" firstItem="193" firstAttribute="bottom" secondItem="1430" secondAttribute="bottom" constant="167"/>
+                            <constraint id="1442" firstItem="1430" firstAttribute="centerX" secondItem="985" secondAttribute="centerX"/>
                         </constraints>
                     </view>
                     <connections>
@@ -327,14 +353,14 @@
                         <viewControllerLayoutGuide type="bottom" id="281"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="284">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="798" translatesAutoresizingMaskIntoConstraints="NO" showsHorizontalScrollIndicator="NO">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="798" translatesAutoresizingMaskIntoConstraints="NO" showsHorizontalScrollIndicator="NO" fixedFrame="YES">
                                 <rect key="frame" x="0.0" y="15" width="320" height="296"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="left" axis="vertical" id="460" translatesAutoresizingMaskIntoConstraints="NO" autoresizesSubviews="NO">
+                                    <stackView opaque="NO" contentMode="left" axis="vertical" id="460" translatesAutoresizingMaskIntoConstraints="NO" autoresizesSubviews="NO" fixedFrame="YES">
                                         <rect key="frame" x="0.0" y="0.0" width="304" height="254"/>
                                         <subviews/>
                                         <variation key="heightClass=regular-widthClass=compact" distribution="equalSpacing" spacing="1" alignment="trailing" fixedFrame="YES"/>
@@ -352,7 +378,7 @@
                                 </variation>
                             </scrollView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="288" translatesAutoresizingMaskIntoConstraints="NO">
-                                <rect key="frame" x="0.0" y="417" width="320" height="34"/>
+                                <rect key="frame" x="0.0" y="505" width="320" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="Add Ticket">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -364,7 +390,7 @@
                                 <connections/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="287" translatesAutoresizingMaskIntoConstraints="NO" horizontalHuggingPriority="1000">
-                                <rect key="frame" x="0.0" y="367" width="320" height="33"/>
+                                <rect key="frame" x="0.0" y="455" width="320" height="33"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <state key="normal" title="Submit">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -435,6 +461,6 @@
         <image name="DropDownArrow.png" width="225" height="225"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedScreenMetrics key="destination"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
 </document>
